# minishell

./: .minishell_history  CMakeLists.txt  Makefile  a.out  addit_func.c  all_com.c  baks.c  cd.c  check_pars_cmd.c  command_processing.c  echo.c  env.c  exit.c  export.c  fork_herdoc.c  lst_func_env.c  lst_functions.c  main.c  make_correct.txt  menu.c  minishell  minishell.h  pars_func_0.c  pars_func_1.c  parser.c  pipes.c  pipes_utils.c  preparser.c  print.c  pwd.c  readme.txt  redirect.c  redirects.c  signal.c  test.c  unset.c  utils1.c
GNL/: get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c
libft/: Makefile  a.out  ft_atoi.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstlast.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  libft.h
minishell.dSYM/Contents/Resources/DWARF/: minishell
